[package]
edition = "2018"
name = "rayon-demo"
version = "0.0.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
publish = false

[dependencies]
rayon = { git= "https://github.com/ma1ko/rayon"}
cgmath = "0.17"
docopt = "1"
fixedbitset = "0.3.0"
glium = "0.27.0"
lazy_static = "1"
rand = "0.7"
rand_xorshift = "0.2"
regex = "1"
adaptive_iterator = {git = "https://github.com/ma1ko/adaptive_iterator"}
rayon_try_fold = {git= "https://github.com/ma1ko/rayon_try_fold"}

[dependencies.serde]
version = "1.0.85"
features = ["derive"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[dev-dependencies]
doc-comment = "0.3"
num = "0.2"
